refactor: 'userId' instead of 'resourceId', updated swagger and credential code to certificate

--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -1,26 +1,53 @@
 <html>
-<head>
+  <head>
     <title>ListVideo</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-</head>
-<body style="font-family: Arial, sans-serif; font-size: 16px; color: #333; text-align: center; max-width: 900px; margin: 0 auto;">
-<header style="background-color: #fc3535; padding: 20px; text-align: center;">
-    <img src="https://www.listvideo.app/static/media/logo_secondary_white.c75cbcc04b085ac604d2.png" alt="Logo ListVideo" style="width: auto; height: 50px;">
-</header>
-<main style="margin-top: 50px;text-align: center;">
-    <p>Hello, <strong>{{name}}</strong>! </p>
-    <p>{{body}}</p>
-    <div style="margin: 40px;">
-        <a href="{{linkUrl}}" style="color: #000000;">{{linkText}}</a>
-    </div>
-    <div style="margin: 40px;">
-        <p> Thanks, <br /> ListVideo Team </p>
-    </div>
-</main>
-<footer style="background-color: #000; padding: 10px; text-align: center; color: #fff; font-size: 12px; margin-top: 20px;">
-    <span>{{date}}</span>
-    <br />
-    <a href="https://www.listvideo.app" target="_blank" style="color:#ffffff; font-weight: bold; text-decoration: none;">https://www.listvideo.app</a>
-</footer>
-</body>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  </head>
+  <body
+    style="
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      color: #333;
+      text-align: center;
+      max-width: 900px;
+      margin: 0 auto;
+    "
+  >
+    <header
+      style="background-color: #fc3535; padding: 20px; text-align: center"
+    >
+      <img
+        src="./listvideo.png"
+        alt="Logo ListVideo"
+        style="width: auto; height: 50px"
+      />
+    </header>
+    <main style="margin-top: 50px; text-align: center">
+      <p>Hello, <strong>{{name}}</strong>!</p>
+      <p>{{body}}</p>
+      <div style="margin: 40px">
+        <a href="{{linkUrl}}" style="color: #000000">{{linkText}}</a>
+      </div>
+      <div style="margin: 40px">
+        <p>
+          Thanks, <br />
+          ListVideo Team
+        </p>
+      </div>
+    </main>
+    <footer
+      style="
+        background-color: #000;
+        padding: 10px;
+        text-align: center;
+        color: #fff;
+        font-size: 12px;
+        margin-top: 20px;
+      "
+    >
+      <span>{{date}}</span>
+      <br />
+      © 2023 ListVideo App
+    </footer>
+  </body>
 </html>
