--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -13,41 +13,43 @@
       margin: 0 auto;
     "
   >
-    <header
-      style="background-color: #fc3535; padding: 20px; text-align: center"
-    >
-      <img
-        src="./listvideo.png"
-        alt="Logo ListVideo"
-        style="width: auto; height: 50px"
-      />
-    </header>
-    <main style="margin-top: 50px; text-align: center">
-      <p>Hello, <strong>{{name}}</strong>!</p>
-      <p>{{body}}</p>
-      <div style="margin: 40px">
-        <a href="{{linkUrl}}" style="color: #000000">{{linkText}}</a>
-      </div>
-      <div style="margin: 40px">
-        <p>
-          Thanks, <br />
-          ListVideo Team
-        </p>
-      </div>
+    <main style="background-color: #f3f3f3">
+      <header
+        style="background-color: #fc3535; padding: 20px; text-align: center"
+      >
+        <img
+          src="cid:logo"
+          alt="Logo ListVideo"
+          style="width: auto; height: 50px"
+        />
+      </header>
+      <main style="margin-top: 50px; text-align: center">
+        <p>Hello, <strong>{{name}}</strong>!</p>
+        <p>{{body}}</p>
+        <div style="margin: 40px">
+          <a href="{{linkUrl}}" style="color: #000000">{{linkText}}</a>
+        </div>
+        <div style="margin: 40px">
+          <p>
+            Thanks, <br />
+            ListVideo Team
+          </p>
+        </div>
+      </main>
+      <footer
+        style="
+          background-color: #000;
+          padding: 10px;
+          text-align: center;
+          color: #fff;
+          font-size: 12px;
+          margin-top: 20px;
+        "
+      >
+        <span>{{date}}</span>
+        <br />
+        © 2023 ListVideo App
+      </footer>
     </main>
-    <footer
-      style="
-        background-color: #000;
-        padding: 10px;
-        text-align: center;
-        color: #fff;
-        font-size: 12px;
-        margin-top: 20px;
-      "
-    >
-      <span>{{date}}</span>
-      <br />
-      © 2023 ListVideo App
-    </footer>
   </body>
 </html>
