--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -8,48 +8,62 @@
       font-family: Arial, sans-serif;
       font-size: 16px;
       color: #333;
-      text-align: center;
       max-width: 900px;
       margin: 0 auto;
     "
   >
-    <main style="background-color: #f3f3f3">
-      <header
-        style="background-color: #fc3535; padding: 20px; text-align: center"
-      >
-        <img
-          src="cid:logo"
-          alt="Logo ListVideo"
-          style="width: auto; height: 50px"
-        />
-      </header>
-      <main style="margin-top: 50px; text-align: center">
-        <p>Hello, <strong>{{name}}</strong>!</p>
-        <p>{{body}}</p>
-        <div style="margin: 40px">
-          <a href="{{linkUrl}}" style="color: #000000">{{linkText}}</a>
-        </div>
-        <div style="margin: 40px">
-          <p>
-            Thanks, <br />
-            ListVideo Team
-          </p>
-        </div>
-      </main>
-      <footer
-        style="
-          background-color: #000;
-          padding: 10px;
-          text-align: center;
-          color: #fff;
-          font-size: 12px;
-          margin-top: 20px;
-        "
-      >
-        <span>{{date}}</span>
-        <br />
-        © 2023 ListVideo App
-      </footer>
-    </main>
+    <table style="width: 100%; background-color: #f3f3f3">
+      <tr>
+        <td>
+          <table style="width: 100%">
+            <tr>
+              <td
+                style="
+                  background-color: #fc3535;
+                  padding: 20px;
+                  text-align: center;
+                "
+              >
+                <img
+                  src="cid:logo"
+                  alt="Logo ListVideo"
+                  style="width: auto; height: 50px"
+                />
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <tr>
+        <td style="margin-top: 50px; text-align: center">
+          <p>Hello, <strong>{{name}}</strong>!</p>
+          <p>{{body}}</p>
+          <div style="margin: 40px">
+            <a href="{{linkUrl}}" style="color: #000000">{{linkText}}</a>
+          </div>
+          <div style="margin: 40px">
+            <p>
+              Thanks, <br />
+              ListVideo Team
+            </p>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td
+          style="
+            background-color: #000;
+            padding: 10px;
+            text-align: center;
+            color: #fff;
+            font-size: 12px;
+            margin-top: 20px;
+          "
+        >
+          <span>{{date}}</span><br />
+          © 2023 ListVideo App
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
