chore: updating email template to new visual id

--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -19,7 +19,8 @@
             <tr>
               <td
                 style="
-                  background-color: #fc3535;
+                  background-color: #181818;
+                  border-bottom: 10px solid #d8006d;
                   padding: 20px;
                   text-align: center;
                 "
@@ -52,7 +53,7 @@
       <tr>
         <td
           style="
-            background-color: #000;
+            background-color: #000000;
             padding: 10px;
             text-align: center;
             color: #fff;
