feat: new visual id

--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -20,7 +20,7 @@
               <td
                 style="
                   background-color: #181818;
-                  border-bottom: 10px solid #d8006d;
+                  border-bottom: 10px solid #eb3838;
                   padding: 20px;
                   text-align: center;
                 "
