feat: update email-template.html

--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -12,8 +12,8 @@
       margin: 0 auto;
     "
   >
-    <table style="width: 100%; background-color: #f3f3f3">
-      <tr>
+    <table style="border:none; width: 100%; background-color: #f3f3f3" border="1" cellspacing="0" rules="none">
+      <tr style="border:none;">
         <td>
           <table style="width: 100%">
             <tr>
@@ -36,7 +36,7 @@
         </td>
       </tr>
       <tr>
-        <td style="margin-top: 50px; text-align: center">
+        <td style="border:none; margin-top: 50px; text-align: center">
           <p>Hello, <strong>{{name}}</strong>!</p>
           <p>{{body}}</p>
           <div style="margin: 40px">
@@ -50,9 +50,10 @@
           </div>
         </td>
       </tr>
-      <tr>
+      <tr style="border:none;">
         <td
           style="
+            border:none;
             background-color: #000000;
             padding: 10px;
             text-align: center;
