fix: removing all border from email email-template.html

--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -14,11 +14,12 @@
   >
     <table style="border:none; width: 100%; background-color: #f3f3f3" border="1" cellspacing="0" rules="none">
       <tr style="border:none;">
-        <td>
-          <table style="width: 100%">
-            <tr>
+        <td style="border:none;">
+           <table style="border:none; width: 100%;" border="1" cellspacing="0" rules="none">
+            <tr style="border:none;">
               <td
                 style="
+                  border:none;
                   background-color: #181818;
                   border-bottom: 10px solid #eb3838;
                   padding: 20px;
@@ -35,7 +36,7 @@
           </table>
         </td>
       </tr>
-      <tr>
+      <tr style="border:none;">
         <td style="border:none; margin-top: 50px; text-align: center">
           <p>Hello, <strong>{{name}}</strong>!</p>
           <p>{{body}}</p>
